handle multiple geo indexes with $near SERVER-686